# rnd-strategy-agent

./: .env.example  .gitignore  README.md  app.py  config.py  document_loader.py  llm_runner.py  pyproject.toml
agents/: competitor_discovery_agent.py  draft_generation_agent.py  rag_agent.py  review_validation_agent.py  web_search_agent.py
data/metadata/hbm4/: documents.json
nodes/: formatting_node.py
outputs/: draft_report.md  final_report.md  revised_draft_report.md
prompts/: analysis_prompt.txt  draft_prompt.txt  finalize_prompt.txt  revision_prompt.txt  validation_prompt.txt
